# swainos_backend

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: action-log-updates.mdc  backend-development-guidelines.mdc  backend-naming-conventions.mdc
scripts/: backfill_fx_rates_history.py  cleanup_inactive_employees.py  generate_ai_insights.py  generate_fx_intelligence.py  pull_fx_rates.py  purge_ai_insights.py  refresh_consultant_ai_rollups.py  refresh_fx_exposure.py  refresh_travel_trade_rollups.py  sync_marketing_web_analytics.py  sync_salesforce_readonly.py  upsert_agencies.py  upsert_bookings.py  upsert_customer_payments.py  upsert_employees.py  upsert_itineraries.py  upsert_itinerary_items.py  upsert_supplier_invoice_bookings.py  upsert_supplier_invoice_lines.py  upsert_supplier_invoices.py  upsert_suppliers.py  validate_salesforce_readonly_permissions.py
src/: main.py
src/analytics/: booking_forecast.py  cash_flow.py
src/api/: ai_insights.py  ai_runs.py  ap.py  auth.py  authz.py  booking_forecasts.py  cash_flow.py  data_job_runs.py  (+21 more)
swainos_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  marketing_web_analytics_testkit.py  test_ai_insights_api.py  test_analytics_api.py  test_data_job_service.py  test_data_jobs_api.py  test_fx_api.py  test_fx_service.py  test_health.py  test_marketing_web_analytics_api.py  test_marketing_web_analytics_service.py  test_openai_insights_service.py  test_revenue_bookings_api.py  test_run_token_enforcement.py  test_runtime_config.py  test_salesforce_bulk_client.py  test_travel_consultants_api.py
(+69 files in other folders)
